--- a/fixtures/e03.md
+++ b/fixtures/e03.md
@@ -1,11 +1,33 @@
-#Title slide 3
+# Title slide 3
 
 text
 
-##The Subtitle
+## The Subtitle
 
 text text text
 
 This is a test!
+
+```golang
+	f, err := os.Open(file)
+	if err != nil {
+		return err
+	}
+
+	b, err := ioutil.ReadAll(f)
+	if err != nil {
+		return err
+	}
+
+	out, _ := glamour.Render(string(b), "dark")
+```
+
+this is a teste of text with multiple lines hthis is a teste of text with multiple lines ithis is a teste of text with multiple lines sthis is a teste of text with multiple lines  this is a teste of text with multiple lines ithis is a teste of text with multiple lines sthis is a teste of text with multiple lines  this is a teste of text with multiple lines athis is a teste of text with multiple lines  teste of text with multiple lines
+
+### test 
+
+this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines 
+
+this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines
 
 
