fix terminal size

--- a/fixtures/e03.md
+++ b/fixtures/e03.md
@@ -28,6 +28,10 @@ this is a teste of text with multiple lines hthis is a teste of text with multip
 
 this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines 
 
+---
+
 this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines
 
+---
 
+test 
