--- a/fixtures/e03.md
+++ b/fixtures/e03.md
@@ -9,24 +9,24 @@ text text text
 This is a test!
 
 ```golang
-	f, err := os.Open(file)
-	if err != nil {
-		return err
-	}
+ f, err := os.Open(file)
+ if err != nil {
+  return err
+ }
 
-	b, err := ioutil.ReadAll(f)
-	if err != nil {
-		return err
-	}
+ b, err := io.ReadAll(f)
+ if err != nil {
+  return err
+ }
 
-	out, _ := glamour.Render(string(b), "dark")
+ out, _ := glamour.Render(string(b), "dark")
 ```
 
 this is a teste of text with multiple lines hthis is a teste of text with multiple lines ithis is a teste of text with multiple lines sthis is a teste of text with multiple lines  this is a teste of text with multiple lines ithis is a teste of text with multiple lines sthis is a teste of text with multiple lines  this is a teste of text with multiple lines athis is a teste of text with multiple lines  teste of text with multiple lines
 
-### test 
+### test
 
-this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines 
+this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines this is a teste of text with multiple lines
 
 ---
 
@@ -34,4 +34,4 @@ this is a teste of text with multiple lines this is a teste of text with multipl
 
 ---
 
-test 
+test
